<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <TextView
        android:id="@+id/amt"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:text="@string/amount" />

    <EditText
        android:id="@+id/enter_amount"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:inputType="number"
        android:digits="1234567890"
        android:hint="Enter Amount" />

    <TextView
        android:id="@+id/pax"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:text="@string/num_of_pax" />

    <EditText
        android:id="@+id/num_of_pax"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:inputType="number"
        android:digits="1234567890"
        android:hint="Enter Pax" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="58dp"
        android:orientation="horizontal">

        <ToggleButton
            android:id="@+id/svs"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_weight="0.5"
            android:textOff="NO SVS"
            android:textOn="SVS"/>

        <ToggleButton
            android:id="@+id/gst"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="10dp"
            android:layout_weight="0.5"
            android:textOff="NO GST"
            android:textOn="GST" />
    </LinearLayout>

    <TextView
        android:id="@+id/disc"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:text="Discount (%)" />

    <EditText
        android:id="@+id/discInput"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:inputType="number"
        android:digits="1234567890"
        android:hint="Enter Discount" />

    <RadioGroup
        android:id="@+id/rgPayment"
        android:layout_width="match_parent"
        android:layout_height="65dp"
        android:orientation="horizontal">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <RadioButton
                android:id="@+id/cash"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:text="Cash" />

            <RadioButton
                android:id="@+id/Paynow"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginRight="10dp"
                android:text="PayNow" />

        </LinearLayout>

        <Button
            android:id="@+id/button2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="Button" />
    </RadioGroup>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="58dp"
        android:orientation="horizontal">


        <Button
            android:id="@+id/splt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="5dp"
            android:layout_weight="0.5"
            android:text="@string/splt" />

        <Button
            android:id="@+id/rst"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="5dp"
            android:layout_marginRight="10dp"
            android:layout_weight="0.5"
            android:text="@string/rst" />
    </LinearLayout>

    <TextView
        android:id="@+id/ttlBill"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/ttlBill" />

    <TextView
        android:id="@+id/eachPay"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/eachPay" />

</LinearLayout>